syntax = "proto3";

package shortener;

option go_package = "github.com/LAshinCHE/Link_Shortening_Service/api/proto/shortener";

service Shortener{
    rpc GetURL(GetURLRequest) returns(GetURLResponse);
    rpc AddURL(AddURLRequest) returns(AddURLResponse);
}

message GetURLRequest{
    string shortURL = 1;
}

message GetURLResponse{
    string originalURL = 1;
}

message AddURLRequest{
    string originalURL = 1;
}

message AddURLResponse{
    string shortURL = 1;
}